=> Updated connection parameters in service.

--- a/OSD_ChatServer/package.json
+++ b/OSD_ChatServer/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve && node /Server/server.js",
+    "startBackEnd": "node ./Server/server.js",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
